# algorithm-problem-client

./: .gitignore  Cargo.toml  README.md
src/: aoj.rs  atcoder.rs  codechef.rs  codeforces.rs  error.rs  lib.rs  util.rs  yukicoder.rs
src/aoj/: client.rs  types.rs
src/atcoder/: client.rs  contest.rs  submission.rs  types.rs
src/codechef/: client.rs  problem.rs  types.rs
src/codeforces/: client.rs  problem.rs  types.rs
test_resources/: codeforces_problemset
test_resources/codeforces_problemset_files/: sdk.js
