[package]
name = "algorithm-problem-client"
version = "0.4"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
description = "HTTP Client for algorithm problems"
license-file = "LICENSE"
exclude = ["test_resources/*"]

[dependencies]
reqwest = "0.9"
scraper = "0.10"
chrono = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
