[package]
name = "algorithm-problem-client"
version = "0.5.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
description = "HTTP Client for algorithm problems"
license-file = "LICENSE"
exclude = ["test_resources/*"]

[dependencies]
surf = "1.0"
scraper = "0.11"
chrono = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
